@@ -5,6 +5,7 @@ Date: ????
     - Shattered planet mod support:
       ► Crapapult can now be placed on the shattered planet.
       ► New cross tech for shattered planet.
+    - Added diagnostics to technology prerequisite search.
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.95
 Date: 2025-08-10
